paper system no longer flashes due to hardcoded visibility, started on bottom menu idea

--- a/rmit-press/src/App.css
+++ b/rmit-press/src/App.css
@@ -33,6 +33,44 @@ footer {
   text-align: right;
 }
 
+.scrolling-banner-child{
+  box-sizing: border-box;
+  height: 100%;
+  vertical-align:text-top;
+  text-align: center;
+  width: 25%;
+  float: left;
+  background-color: transparent;
+  /*border-width: 5px;*/
+  border-top: 2.5px;
+  border-left: 2.5px;
+  border-right: 2.5px;
+  border-bottom: 0px;
+  border-style: solid;
+}
+
+.scrolling-banner-child:hover{
+  border-style: solid;
+  /*border-width: 7.5px;*/
+  border-top: 3px;
+  border-left: 3px;
+  border-right: 3px;
+  border-bottom: 0px;
+  border-color: grey;
+}
+
+.scrolling-banner-parent{
+  z-index: 999;
+  position:fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+  /*background-color: blue;
+  display: flex;*/
+  overflow: hidden;
+}
+
 .index-dt{
   padding-bottom: 5px;
 }
